--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,13 @@ services:
     image: flagcounter:latest
     container_name: flagcounter
     restart: unless-stopped
+    environment:
+      - FC_ROOT=/flagcounter-iframe/
+      - FC_PORT=5679
+      - FC_TITLE="Flag Counter"
+      - FC_DB_FILE=data/flagcounter.db
+      - FC_CLOUDFLARE=false
     volumes:
-      - ./db:/flagcounter/db
+      - ./data:/flagcounter/data
     ports:
       - 127.0.0.1:5679:5679
